kubernetes-manifests/gitea/gitea-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: gitea
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
    spec:
      containers:
        - name: gitea
          image: "gitea/gitea:1.10.2"
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 22
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
          - name: gitea-data
            mountPath: /data
      nodeSelector:
        "kubernetes.io/arch": "amd64"
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-data-pvc
      dnsConfig:
        options:
        - name: ndots
          value: "1"
