kubernetes-manifests/gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: gitea
  name: gitea
  namespace: gitea
spec:
  clusterIP: None
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  - name: ssh
    port: 22
    targetPort: 22
  selector:
    app.kubernetes.io/name: gitea
